Make sure input toolbar dropdown overlaps properly and that the input has max 50% of screenheight

--- a/src/components/input/chat/input.scss
+++ b/src/components/input/chat/input.scss
@@ -9,6 +9,23 @@
 .editor-inner {
     background: #fff;
     position: relative;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    max-height: 50lvh;
+}
+
+.editor-inner::-webkit-scrollbar {
+    width: 8px;
+}
+
+.editor-inner::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.editor-inner::-webkit-scrollbar-thumb {
+    background-color: rgba(155, 155, 155, 0.5);
+    border-radius: 5px;
+    border: transparent;
 }
 
 .editor-input {
@@ -231,8 +248,9 @@
     z-index: 5;
     display: inline-flex;
     flex-direction: column;
-    //position: absolute;
+    position: absolute;
     //position: relative;
+    bottom: 0;
     margin-bottom: 24px;
     box-shadow: 0 12px 28px 0 rgba(0, 0, 0, 0.2), 0 2px 4px 0 rgba(0, 0, 0, 0.1),
         inset 0 0 0 1px rgba(255, 255, 255, 0.5);
